Submenus in hamburguer finished

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,13 +17,43 @@
                 <div class="menu">
                     <div class="menu-inner">
                         <nav>
-                            <ul>
-                                <a href="/"><li>Home - Resources</li></a>
-                                <a href="/lessons"><li>All Lessons</li></a>
-                                <a href="/lessons/basics"><li>Basics</li></a>
-                                <a href="/lessons/checkpoint_1"><li>Checkpoint 1</li></a>
-                                <a href="/lessons/checkpoint_2"><li>Checkpoint 2</li></a>
-                            </ul>
+                            <a href="/">Home - Resources</a>
+                            <a href="/lessons">All Lessons</a>
+                            <span class="dropdown-title">Basics</span>
+                            <input type="checkbox" class="dropdown-btn" id="dropdown-btn-basics">
+                            <div class="dropdown-container" id="dropdown-container-basics">
+                                <a href="/lessons/basics/01_basics_1.html">Polish basics 1</a>
+                                <a href="/lessons/basics/02_basics_2.html">Polish basics 2</a>
+                                <a href="/lessons/basics/03_phrases.html">Basic phrases</a>
+                                <a href="/lessons/basics/04_animals_1.html">Animals 1</a>
+                                <a href="/lessons/basics/05_food_1.html">Food 1</a>
+                                <a href="/lessons/basics/06_defining.html">Defining</a>
+                                <a href="/lessons/basics/07_demonstrating.html">Demonstrating</a>
+                                <a href="/lessons/basics/08_adjectives_1.html">Adjectives 1</a>
+                            </div>
+                            <span class="dropdown-title">Checkpoint 1</span>
+                            <input type="checkbox" class="dropdown-btn" id="dropdown-btn-chk1">
+                            <div class="dropdown-container" id="dropdown-container-chk1">
+                                <a href="/lessons/checkpoint_1/09_plurals.html">Plurals</a>
+                                <a href="/lessons/checkpoint_1/10_clothing.html">Clothing</a>
+                                <a href="/lessons/checkpoint_1/11_present_1.html">Present 1</a>
+                                <a href="/lessons/checkpoint_1/12_negation.html">Negation</a>
+                                <a href="/lessons/checkpoint_1/13_possessive_pronouns.html">Possessive Pronouns</a>
+                                <a href="/lessons/checkpoint_1/14_pronouns_1.html">Pronouns 1</a>
+                                <a href="/lessons/checkpoint_1/15_present_2.html">Present 2</a>
+                                <a href="/lessons/checkpoint_1/16_family.html">Family</a>
+                            </div>
+                            <span class="dropdown-title">Checkpoint 2</span>
+                            <input type="checkbox" class="dropdown-btn" id="dropdown-btn-chk2">
+                            <div class="dropdown-container" id="dropdown-container-chk2">
+                                <a href="/lessons/checkpoint_2/17_colors.html">Colors</a>
+                                <a href="/lessons/checkpoint_2/17_5_extra_1.html">Extra Vocabulary from songs</a>
+                                <a href="/lessons/checkpoint_2/18_questions.html">Questions</a>
+                                <a href="/lessons/checkpoint_2/19_present_3.html">Present 3</a>
+                                <a href="/lessons/checkpoint_2/20_time.html">Time</a>
+                                <a href="/lessons/checkpoint_2/21_household.html">Household</a>
+                                <a>Coming Soon!</a>
+                            </div>
                         </nav>
                     </div>
                 </div>
