Add blog and updates section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
                     <div class="menu-inner">
                         <nav>
                             <a href="/">Home - Resources</a>
+                            <a href="/blog">Blog - Updates</a>
                             <a href="/lessons">All Lessons</a>
                             <span class="dropdown-title">Basics</span>
                             <input type="checkbox" class="dropdown-btn" id="dropdown-btn-basics">
