--- a/css/main.css
+++ b/css/main.css
@@ -491,6 +491,38 @@ ul li{
 .regular h4{
 }
 
+.regular-off-white{
+    display:inline-block;
+    background: var(--off-white);
+    color: #000;
+    width: 125%;
+    margin-left: -12.5%;
+    padding-left:12.5%;
+    padding-right: 12.5%;
+}
+
+.regular-off-white a {
+}
+
+.regular-off-white a:hover {
+}
+
+.regular-off-white a:visited {
+}
+
+.regular-off-white h1{
+}
+
+.regular-off-white h2{
+    color: var(--hyperlink-red-visited)
+}
+
+.regular-off-white h3{
+}
+
+.regular-off-white h4{
+}
+
 /*emphasis-off-white*/
 
 .emphasis-off-white{
@@ -741,6 +773,20 @@ th{
 }
 
 /* END TABLES */
+
+.blog-date{
+    display: block;
+    margin-top: 0.2em;
+    margin-bottom: 0;
+    color: #6a6a6a;
+}
+
+.blog-entry{
+    display: block;
+    padding-top: 0.2em;
+    padding-bottom: 0.5em;
+}
+
 
 #about_img {
     display: inline;
