fixed verbs tables and added lesson 10_clothing

--- a/css/main.css
+++ b/css/main.css
@@ -711,9 +711,9 @@ table{
     border-collapse: collapse;
 }
 
-th{
+/*th{
     border-bottom: 0.1em solid #000;
-}
+}*/
 
 .table-emphasis-duo-blue th{
     background: var(--duo-blue);
