--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="header-bar">
                     <a href="/">
-                        <img id="poland_flag" src="/assets/320px-Flag_of_Poland.svg.png" alt="Flag of Poland">
+                        <img id="poland_flag" src="/assets/320px-Flag_of_Poland.svg.png" title="Flag of Poland" alt="Flag of Poland">
                     </a>
                     <h1>Elisa's Duo Polski Notes</h1>
                 </div>
