Changed account to polski-duo-notes and removed instances of my name and ex

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
             <title>{{ page.title }}</title>
             <!-- link to main stylesheet -->
             <link rel="stylesheet" type="text/css" href="/css/main.css">
-            <meta name="description" content="Elisa's Duolingo Polski notes: I follow the lessons in Duolingo for Polish and make notes about the grammar and vocabulary that we are learning in each of them.">
-            <meta name="og:title" property="og:title" content="Elisa's Duo Polski: Duolingo Polish notes">
+            <meta name="description" content="Polski Duo Notes: I follow the lessons in Duolingo for Polish and make notes about the grammar and vocabulary that we are learning in each of them.">
+            <meta name="og:title" property="og:title" content="Polski Duo Notes: Duolingo Polish notes">
             <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
             {% if site.google_analytics and jekyll.environment == 'production' %}
             {% include analytics.html %}
@@ -65,7 +65,7 @@
                     <a href="/">
                         <img id="poland_flag" src="/assets/320px-Flag_of_Poland.svg.png" title="Flag of Poland" alt="Flag of Poland">
                     </a>
-                    <h1>Elisa's Duo Polski Notes</h1>
+                    <h1>Polski Duo Notes Notes</h1>
                 </div>
             </div>
             <div class="container">
@@ -98,7 +98,7 @@
                         <span class="footer-title">Contact</span>
                         <ul>
                             <li><a href="https://forum.duolingo.com/comment/34799185">Original Post in Duolingo</a></li>
-                            <li>Owner email: <a href="mailto:elisa.duo.polski@gmail.com">elisa.duo.polski@gmail.com</a></li>
+                            <li>Owner email: <a href="mailto:polski.duo.notes@gmail.com">polski.duo.notes@gmail.com</a></li>
                         </ul>
                     </div>
                 </div>
